argocd/manifests/vaultwarden/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
